@@ -65,6 +65,7 @@ Fixed:
 - Fixed Cannon Carriage rotation info tooltip and syncing
 - Fixed Disable All Failures applying to big cannon projectiles with 0 cannon power
 - Fixed schematics not saving data of many blocks by adding #create:safe_nbt
+- Fixed potential crash on cannon failure in Cannon Mount code
 
 ===
 
